objects/blng__BillingPrefix__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>blng__BarPrefix__c</fullName>
        <label>BarPrefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__DotPrefix__c</fullName>
        <label>DotPrefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blng__RawPrefix__c</fullName>
        <label>RawPrefix</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>BillingPrefix</label>
</CustomObject>